# udata-search-service

./: CHANGELOG.md  Dockerfile  Makefile  README.md  app.json  bumpr.rc  docker-compose.test.yml  docker-compose.yml  gunicorn.sh  pyproject.toml  requirements.txt  search.py  seed.py
.circleci/: config.yml
.github/workflows/: build.yml  github-actions.yml  publish.yml
Dockerfiles/: Dockerfile.app  Dockerfile.consumer
app/: __init__.py  config.py  container.py
app/domain/: entities.py  factories.py  interfaces.py
app/infrastructure/: index.py  kafka_consumer.py  migrate.py  search_clients.py  services.py  utils.py
app/presentation/: api.py  cli.py  commands.py  seed.py
app/presentation/api/api_v1/: __init__.py
app/presentation/api/api_v1/endpoints/: dataset.py  organization.py  reuse.py
kafka-consumer/: Dockerfile  consumer.py
tests/: conftest.py  test_api.py  test_consumers.py  test_kafka_consumer.py  test_search_client.py  test_views.py
tests/domain/: test_services.py
udata_search_service/: __init__.py  app.py  config.py  container.py
udata_search_service/domain/: entities.py  factories.py  interfaces.py
udata_search_service/infrastructure/: consumers.py  kafka_consumer.py  migrate.py  search_clients.py  services.py  utils.py
udata_search_service/presentation/: api.py  commands.py  utils.py
