[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "udata-search-service"
authors = [{name = "Opendata Team", email = "opendatateam@data.gouv.fr"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "dependency-injector==4.41.0",
    "elasticsearch==7.15.0",
    "elasticsearch_dsl==7.4.0",
    "factory-boy==3.2.1",
    "Faker==11.3.0",
    "flake8==4.0.1",
    "Flask==2.2.5",
    "flit==3.6.0",
    "gunicorn==20.1.0",
    "pydantic==1.9.0",
    "pytest==6.2.5",
    "pytest-flask==1.2.0",
    "markdown==3.3.3",
    "beautifulsoup4==4.10.0",
    # pinned to a known working version, since 3.1.3 will fail while running tests
    "werkzeug==3.0.4",
]

[project.urls]
Home = "https://github.com/opendatateam/udata-search-service"

[tool.flit.module]
name = "udata_search_service"

[project.scripts]
 udata-search-service = "udata_search_service.app:cli"
