[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "udata-search-service"
authors = [{name = "Opendata Team", email = "opendatateam@data.gouv.fr"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "dependency-injector==4.48.1",
    "elasticsearch==8.19.0",
    "elasticsearch_dsl==8.18.0",
    "factory-boy==3.3.3",
    "Faker==37.5.3",
    "flake8==7.3.0",
    "Flask==2.2.5",
    "flit==3.12.0",
    "gunicorn==23.0.0",
    "pydantic==2.11.7",
    "pytest==8.4.1",
    "pytest-flask==1.3.0",
    "markdown==3.8.2",
    "beautifulsoup4==4.13.5",
    # pinned to a known working version, since 3.1.3 will fail while running tests
    "werkzeug==3.0.4",
]

[project.urls]
Home = "https://github.com/opendatateam/udata-search-service"

[tool.flit.module]
name = "udata_search_service"

[project.scripts]
 udata-search-service = "udata_search_service.app:cli"
